<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>json-xtypes</name>
  <!-->Same version as Integration Service?<-->
  <version>3.0.0</version>
  <!-->Modify description accordingly<-->
  <description>
    Utility that converts from xtypes to json
  </description>
  <!-->Add maintainers<-->
  <maintainer email="support@eprosima.com">eProsima</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <url type="website">https://www.eprosima.com/</url>
  <url type="bugtracker">https://github.com/eProsima/Integration-Service/issues</url>
  <url type="repository">https://github.com/eProsima/Integration-Service</url>

  <build_depend>xtypes</build_depend>
  <build_depend>integration-service-core</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
